# pd-cms-mpi

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cmake.sh
3rd/CPMCache/eigen3/9042bc3801f3c716404c5594e901ee2d750da160/Eigen3/: CMakeLists.txt
3rd/CPMCache/eigen3/9042bc3801f3c716404c5594e901ee2d750da160/Eigen3/Eigen/src/CholmodSupport/: CholmodSupport.h
3rd/CPMCache/fmt/fdd5b4a64ca6c4fb7a1fcd77771a5304292e2f1b/fmt/include/fmt/: core.h
3rd/CPMCache/spectra/e03a1edf182fff36611919a254ee2590fb0f61b9/spectra/: CMakeLists.txt
3rd/CPMCache/suitesparse/d09a732a09968d02d5b958317e2c3dc4882e8b1a/SuiteSparse/CHOLMOD/Partition/: cholmod_metis_wrapper.c
3rd/CPMCache/suitesparse/d09a732a09968d02d5b958317e2c3dc4882e8b1a/SuiteSparse/CHOLMOD/SuiteSparse_metis/include/: metis.h
3rd/CPMCache/suitesparse/d09a732a09968d02d5b958317e2c3dc4882e8b1a/SuiteSparse/CHOLMOD/SuiteSparse_metis/libmetis/: frename.c  meshpart.c
3rd/CPMCache/suitesparse/d09a732a09968d02d5b958317e2c3dc4882e8b1a/SuiteSparse/SuiteSparse_config/: CMakeLists.txt
apps/: CMakeLists.txt  main.cpp  step1_env_check.cpp  step2_partition_matrix.cpp  step3_mpi_loader.cpp
cmake/: amgcl_disable_cmake_policy_CMP0058.patch  boost_container_disable_macro_I.patch  boost_disable_macro_I.patch  boost_throw_exception_disable_macro_I.patch  boost_type_traits_disable_macro_I.patch  eigen3_skip_build_demo.patch  fmt_disable_macro_I.patch  include_OpenVolumeMesh.cmake  include_amgcl.cmake  include_blas.cmake  include_boost.cmake  include_eigen.cmake  include_fmt.cmake  include_libigl.cmake  include_mkl.cmake  include_mpi.cmake  include_spdlog.cmake  include_suitesparse.cmake  include_tbb.cmake  libigl.cmake  libigl_disable_macro_I.patch  spdlog_disable_macro_I.patch
script/: profile.sh  task_submit.sh
src/: CMakeLists.txt  Eigen_ext.hpp  SparseSymCholmodShiftSolve.h  cms_io.cpp  cms_io.hpp  cms_partition.cpp  cms_partition.hpp  eig.cpp  eig.hpp  save_spm.hpp  sym_shift_invert_with_cholmod.hpp  timer.cpp  timer.hpp
